# Real-Estate-Estimator

./: .gitignore  Dockerfile  README.md  RESTART_20251208.md  RESTART_20251209.md  START_HERE.md  docker-compose.yml  mcp-test.txt  mlflow.db  mlflow_config.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml  train.yml
Reference_Docs/: An agentic-friendly copilot-instruc.txt
archive/: RESTART_20251208.md
archive/docs/: 2025-12-06_analysis_log.md  2025-12-06_data_provenance_log.md  2025-12-07_implementation_log.md  Changes_from_original_to_v1_20251207.md  Changes_from_v2.1_to_v2.3_20251208.md  Changes_from_v2.3_to_v2.4_20251208.md  Changes_from_v2.4_to_v2.5_20251208.md  Changes_from_v3.1_to_v3.2_20251209.md  Changes_from_v3.2_to_v3.3_20251209.md  V1_RELEASE_CHECKLIST.md  V2_Detailed_Roadmap.md  V3_Detailed_Roadmap.md  v2.1_implementation_log.md  v2.3_grid_search_results.csv  v2.3_implementation_log.md  v2.4.1_xgboost_feature_importance.csv  v2.4_feature_importance_20251207_232823.csv  v2.4_model_comparison_20251207_232823.csv  v2.5_robust_evaluation_20251208_092407.json  v2.5_robust_evaluation_20251208_094937.json  v2_roadmap.md
archive/scripts/: compare_endpoints.py  compare_endpoints_by_tier.py  evaluate_zero_shot.py  explore_assessment_data.py  git_v1_release_and_v2_setup.ps1  git_v2.3_complete_and_v2.4_setup.ps1
archive/src/: compare_models.py  evaluate.py  robust_evaluate.py  train.py  train_fresh_data.py  tune.py
demo/: Dockerfile.v1  Dockerfile.v2.5  Dockerfile.v3.3  README.md  compare_versions.py  compare_versions.sh  docker-compose.demo.yml  setup_demo.sh
demo/v1/src/: __init__.py  config.py  main.py  models.py  train.py
demo/v2.5/src/: __init__.py  config.py  train.py  tune.py
docs/: .gitkeep  ARCHITECTURE_REFERENCE-v1-v2.md  ARCHITECTURE_REFERENCE-v2-v3.md  ARCHITECTURE_REFERENCE-v3_1-v3_3.md  Changes_from_v1_to_v2.1_20251208.md  EVALUATION.md  MODEL_VERSION_EVOLUTION-v1-v2.md  MODEL_VERSION_EVOLUTION-v2-v3.md  MODEL_VERSION_EVOLUTION-v3_1-v3_3.md  V2.1.x_Completion_Summary.md  V2.1_Lessons_Learned.md  V2.4_Completion_Summary.md  V2_Detailed_Roadmap.md  V3_Detailed_Roadmap.md  feature_wrap_up_protocol.md  human_in_the_loop_corrections.md  master_log.md
docs/manuals/: API.md  ARCHITECTURE.md  CODE_WALKTHROUGH.md  EVALUATION.md  PRESENTATION_GUIDE.md  PRESENTATION_VISUALS.md
docs/reports/: 2025-12-09_cleanup_log.md  V2.1.2_Adaptive_Analysis_Results.md  V2.1.2_Adaptive_Endpoint_Discovery.md  V2.1.2_Adaptive_Routing_Conclusion.md  V2.3_Completion_Summary.md  V2.3_Lessons_Learned.md  V2.4_Deep_Dive_Educational.md  V2.4_Model_Comparison_Guide.md  V2.5_Robust_Evaluation_Summary.md  V3.1_Completion_Summary.md  V3.2_Fresh_Data_Results.md  V3.2_Fresh_Data_Summary.md  V3.3_Completion_Summary.md  V3.4_Completion_Summary.md
mlflow/: mlflow.db
model/: best_params.json  evaluation_fresh_report.json  metrics.json  model.pkl  model_features.json
output/confidence_routing/: confidence_routing_results_20251208_134925.json
output/hybrid_models/: hybrid_results_20251208_133410.json
output/low_specialist/: low_specialist_optimization_20251208_142831.json
output/tier_analysis/: tier_analysis_2tiers_20251208_124001.json  tier_analysis_3tiers_20251208_112720.json  tier_analysis_4tiers_20251208_123253.json  tier_analysis_5tiers_20251208_113351.json
output/tier_optimization/: tier_split_optimization_20251208_131400.json
output/tiered_models/: baseline_model.pkl  evaluation_results_20251208_131956.json  test_data.pkl  tiered_model_system.pkl
references/mle-project-challenge-2/: create_model.py
scripts/: compare_by_address.py  compare_endpoints.py  compare_endpoints_by_tier.py  download_kc_data.py  download_reference_docs.py  extract_parcel_centroids.py  feature_routing_experiment.py  git_v2.1_complete_and_v2.3_setup.ps1  setup_data.sh  test_api.py
src/: __init__.py  compare_models.py  confidence_routing_system.py  config.py  evaluate.py  evaluate_fresh.py  explore_price_tier_predictors.py  hybrid_tiered_system.py  low_specialist_optimization.py  main.py  models.py  optimize_tier_split.py  robust_evaluate.py  tiered_model_system.py  train.py  train_fresh_data.py  train_with_mlflow.py  tune_top_models.py  tune_v33.py  tune_xgboost.py
src/api/: prediction.py
src/data/: __init__.py  transform_assessment_data.py
src/services/: __init__.py  address_service.py  address_service_v2.py  feature_service.py  model_service.py
tests/: __init__.py  test_model.py
(+23 files in other folders)
