# =============================================================================
# Python Project Configuration
# =============================================================================
#
# This file configures Python tools for the project.
# It's the modern way to configure tools (replacing setup.py, setup.cfg).
#
# Sections:
# - [project]: Package metadata
# - [tool.ruff]: Linter configuration
# - [tool.black]: Formatter configuration
# - [tool.pytest]: Test configuration
#
# =============================================================================

[project]
name = "real-estate-estimator"
version = "3.1.0"
description = "Real estate price prediction API with MLOps"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Real Estate Team"}
]
keywords = ["machine-learning", "real-estate", "prediction", "mlops"]

# Dependencies are in requirements.txt for pip compatibility
# This section is for metadata only

[project.urls]
Repository = "https://github.com/BraPil/Real-Estate-Estimator"

# =============================================================================
# Ruff - Fast Python Linter
# =============================================================================
#
# Ruff is 10-100x faster than other Python linters.
# It replaces: flake8, isort, pyupgrade, and more.
#
# Rules: https://docs.astral.sh/ruff/rules/

[tool.ruff]
# Target Python version
target-version = "py310"

# Line length (match Black)
line-length = 100

# Directories to exclude
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*.egg-info",
    "mlflow",
    "output",
]

[tool.ruff.lint]
# Rules to enable
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort (import sorting)
    "B",      # flake8-bugbear (common bugs)
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade (Python upgrade suggestions)
]

# Rules to ignore
ignore = [
    "E501",   # Line too long (handled by formatter)
    "E402",   # Module import not at top (intentional for warnings.filterwarnings before sklearn)
    "B008",   # Function call in default argument (FastAPI uses this)
    "B023",   # Loop variable binding (common lambda pattern)
    "B904",   # Exception chaining (stylistic - we log before raising)
    "B905",   # zip without strict (Python 3.10+ only)
    "W291",   # Trailing whitespace (in multiline docstrings)
    "W293",   # Blank line whitespace (in multiline docstrings)
]

# Allow autofix for all rules
fixable = ["ALL"]

[tool.ruff.lint.isort]
# Import sorting configuration
known-first-party = ["src"]

# =============================================================================
# Black - Code Formatter
# =============================================================================
#
# Black is the "uncompromising" Python formatter.
# It has very few options by design - less bikeshedding!

[tool.black]
line-length = 100
target-version = ["py310", "py311"]
exclude = '''
/(
    \.git
    | \.venv
    | venv
    | __pycache__
    | mlflow
    | output
)/
'''

# =============================================================================
# Pytest - Test Framework
# =============================================================================
#
# Configuration for running tests with pytest.

[tool.pytest.ini_options]
# Test directories
testpaths = ["tests"]

# Minimum pytest version
minversion = "8.0"

# Add options
addopts = [
    "-v",                    # Verbose output
    "--tb=short",            # Shorter tracebacks
    "-ra",                   # Show summary of all results
]

# Test file patterns
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Markers (custom tags for tests)
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

# =============================================================================
# Coverage - Test Coverage
# =============================================================================

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
